# image-cleanup-tool

./: .gitignore  LICENSE  README.md  analysis_workers.py  backbone.py  image_cache.py  image_encoder.py  json_structure.json  list_image_infos.py  list_images.py  main.py  openai_api.py  pyproject.toml  resize_and_encode.py  run.py  styles.tcss  test_hash_images.py  ui_textual.py  utils.py  workers.py
scripts/: main.py  move_images.py  run.py  test_apis.py  test_claude_api.py  web_ui.py
src/image_cleanup_tool/: __init__.py
src/image_cleanup_tool/api/: __init__.py  backbone.py  base.py  claude_api.py  clients.py  json_structure.json  openai_api.py  prompt.py
src/image_cleanup_tool/core/: __init__.py  backbone.py  file_operations.py  image_cache.py  image_encoder.py  scan_engine.py  workers.py
src/image_cleanup_tool/ui/: __init__.py  rich_ui.py  textual_ui.py
src/image_cleanup_tool/utils/: __init__.py  log_utils.py  utils.py
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: __init__.py  test_hash_images.py  web_ui.py
