[project]
name = "image-cleanup-tool"
version = "0.1.0"
description = "A tool for scanning and analyzing personal photos using AI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "textual>=0.40.0",
    "openai>=1.0.0",
    "pillow>=10.0.0",
    "pillow-heif>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.black]
line-length = 88
target-version = ['py38']
